--- a/css/common.css
+++ b/css/common.css
@@ -2,6 +2,17 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Irish+Grover&display=swap');
 
+/* ===========画像選択拒否=========== */
+body{
+    user-select:none;
+    -webkit-user-select:none;
+    -ms-user-select: none;
+    -moz-user-select:none;
+    -khtml-user-select:none;
+    -webkit-user-drag:none;
+    -khtml-user-drag:none;
+    }
+
 /* ===========カーソルの設定=========== */
 #game {
     cursor: url(../images/hammer.png) 40 40, auto;
